Added font and completed contact page

--- a/contact.html
+++ b/contact.html
@@ -54,29 +54,38 @@
       </section>
 
     <section id="contact" style="text-align: center;">
-        <h2>Contact Me</h2>
+      <br>
+      <div>
+        <h2 style="font-weight: bold;">Contact Me</h2>
+        <p style="font-weight: bold;">I would love to hear from you!</p>
+        <p style="font-weight: bold;">You can contact me via email or phone.</p>
+      </div>
         <div class="contact-info">
-            <p><i class="fa-solid fa-envelope"></i> Email: arsalan.m.saeed@outlook.com </p>
-            <p><i class="fa-solid fa-phone"></i> Phone: (514) 933 - 4322</p>
-            <p><i class="fa-solid fa-location-dot"></i> Location: Chambly, QC</p>
+            <p style="font-weight: bold;" ><i style="color: navy;" class="fa-solid fa-envelope"></i> Email: arsalan.m.saeed@outlook.com </p>
+            <p style="font-weight: bold;" ><i style="color: green;" class="fa-solid fa-phone"></i> Phone: (514) 933 - 4322</p>
+            <p style="font-weight: bold;" ><i style="color: firebrick;" class="fa-solid fa-location-dot"></i> Location: Chambly, QC</p>
         </div>
         <div class="social-icons" style="justify-content: center;">
-            <a href="https://github.com/2191818" target="_blank" aria-label="GitHub">
-                <i class="fa-brands fa-github"></i>
+            <a style="font-weight: bold;" href="https://github.com/2191818" target="_blank" aria-label="GitHub">
+                <i style="color: #58267c;" class="fa-brands fa-github"></i>
                 Github
               </a>
-              <a href="https://www.linkedin.com/in/muhammad-arsalan-saeed/" target="_blank" aria-label="Linkedin">
-                <i class="fa-brands fa-linkedin"></i>              
+              <a style="font-weight: bold;" href="https://www.linkedin.com/in/muhammad-arsalan-saeed/" target="_blank" aria-label="Linkedin">
+                <i style="color: #0967c5;" class="fa-brands fa-linkedin"></i>              
                 Linkedin
             </a>
-              <a href="https://www.instagram.com/arsalan.360/" target="_blank" aria-label="Instagram">
-                <i class="fa-brands fa-instagram"></i>
-                instagram
+              <a style="font-weight: bold;" href="https://www.instagram.com/arsalan.360/" target="_blank" aria-label="Instagram">
+                <i style="color: #ed00be;" class="fa-brands fa-instagram"></i>
+                Instagram
         </div>
     </section>
-    <footer >
-      <div >
-      </div>
-    </footer>
+    <br>
+    <a
+    href="index.html"
+    class="custom-btn"
+    style="text-align: center; display: block; margin: 20px auto;"
+  >
+    Go Home 
+  </a>
   </body>
 </html>
