data, images, skills and projects

--- a/index.html
+++ b/index.html
@@ -66,8 +66,73 @@
       </div>
       
       <div id="projects" class="content-section">
-        <div class="project-card" style="width: 18rem;">
-          <img src="images/Headshot (2).png" class="card-img-top" alt="...">
+        <div class="card-grid">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="images/nba.png" alt="nba-api">
+              </div>
+              <div class="flip-card-back">
+                <h3>nba-api</h3>
+                <p>Description 1</p>
+              </div>
+            </div>
+          </div>
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="images/gauge.jpeg" alt="IotDashboard">
+              </div>
+              <div class="flip-card-back">
+                <h3>IotDashboard</h3>
+                <p>Description 2</p>
+              </div>
+            </div>
+          </div>
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="images/book.png" alt="Library Catalog">
+              </div>
+              <div class="flip-card-back">
+                <h3>Library Catalog</h3>
+                <p>Description 2</p>
+              </div>
+            </div>
+          </div>
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="images/tablogo.png" alt="Riffat's Cuisine">
+              </div>
+              <div class="flip-card-back">
+                <h3>Riffat's Cuisine</h3>
+                <p>Description 2</p>
+              </div>
+            </div>
+          </div>
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="images/vanierlogo.png" alt="Hotel Vanier">
+              </div>
+              <div class="flip-card-back">
+                <h3>Hotel Vanier</h3>
+                <p>Description 2</p>
+              </div>
+            </div>
+          </div>
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="images/gamelogo.png" alt="Deadalus Labyrinth">
+              </div>
+              <div class="flip-card-back">
+                <h3>Deadalus Labyrinth</h3>
+                <p>Description 2</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       
@@ -108,7 +173,7 @@
             <p>HTML/CSS</p>
           </div>
           </div>
-          <p>Learning/Improving Now: </p>
+          <p>Other Skills: </p>
           <div class="skills-card">
             <div class="skill-item">
               <i style="background-color: black; color: #efd81d;" class="fa-brands fa-js"></i>          
@@ -190,16 +255,44 @@
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
+                <th scope="row">Programming I & II</th>
+                <td>Programming I & II</td>
               </tr>
               <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
+                <th scope="row">Programming Patterns</th>
+                <td>Programming Patterns</td>
               </tr>
               <tr>
-                <th scope="row">3</th>
-                <td>John</td>
+                <th scope="row">Application Development I & II</th>
+                <td>Application Development I & II</td>
+              </tr>
+              <tr>
+                <th scope="row">Internet Programming</th>
+                <td>Application Development I & II</td>
+              </tr>
+              <tr>
+                <th scope="row">eCommerce</th>
+                <td>Application Development I & II</td>
+              </tr>
+              <tr>
+                <th scope="row">Web Services</th>
+                <td>Application Development I & II</td>
+              </tr>
+              <tr>
+                <th scope="row">Internet of Things</th>
+                <td>Application Development I & II</td>
+              </tr>
+              <tr>
+                <th scope="row">Game Programming I & II</th>
+                <td>Application Development I & II</td>
+              </tr>
+              <tr>
+                <th scope="row">Advanced Networks,</th>
+                <td>Application Development I & II</td>
+              </tr>
+              <tr>
+                <th scope="row">Ethical Hacking</th>
+                <td>Application Development I & II</td>
               </tr>
             </tbody>
           </table>
