getting closer to finish line

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         <a
           href="MuhammadArsalanSaeedCV.pdf"
           download="MuhammadArsalanSaeedCV.pdf"
-          class="custom-btn"
+          class="custom-btn active"
         >
           Download Resume <i class="fa-solid fa-arrow-down"></i>
         </a>
@@ -87,5 +87,11 @@
   >
     Go Home 
   </a>
+  <br>
+  <footer>
+    <div>
+      <p>Muhammad Arsalan Saeed. 2025 All Rights Reserved</p>
+    </div>
+  </footer>
   </body>
 </html>
