footer change, this sounds more badass

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     </div>
     <footer>
       <div>
-        <p>Muhammad Arsalan Saeed. 2025 All Rights Reserved</p>
+        <p>@2025 Muhammad Arsalan Saeed. All Rights Reserved</p>
       </div>
     </footer>
   </body>
