--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
   <br>
   <footer>
     <div>
-      <p>Muhammad Arsalan Saeed. 2025 All Rights Reserved</p>
+      <p>@2025 Muhammad Arsalan Saeed. All Rights Reserved</p>
     </div>
   </footer>
   </body>
