links for projects, way too lazy to make a full page for each

--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
                 PHP RESTful API with the Slim framework for accessing
                 NBA-related resources via URI
               </p>
-              <a href="" class="link-btn"><i class="fa-solid fa-link"></i> </a>
+              <a href="https://github.com/Hecktox/nba-api" class="link-btn"
+                ><i class="fa-solid fa-link"></i>
+              </a>
             </div>
           </div>
         </div>
@@ -128,7 +130,9 @@
                 Python-based dashboard for real-time control and customization
                 of home settings.
               </p>
-              <a href="" class="link-btn"><i class="fa-solid fa-link"></i> </a>
+              <a href="https://github.com/2191818/IoTProject" class="link-btn"
+                ><i class="fa-solid fa-link"></i>
+              </a>
             </div>
           </div>
         </div>
@@ -144,7 +148,11 @@
                 Node.js, and Express.js. Management of a library's collection,
                 including books, news articles, and papers.
               </p>
-              <a href="" class="link-btn"><i class="fa-solid fa-link"></i> </a>
+              <a
+                href="https://github.com/2191818/Library-Catalog"
+                class="link-btn"
+                ><i class="fa-solid fa-link"></i>
+              </a>
             </div>
           </div>
         </div>
@@ -159,7 +167,11 @@
                 PHP web application for placing food orders with user-friendly
                 features
               </p>
-              <a href="" class="link-btn"><i class="fa-solid fa-link"></i> </a>
+              <a
+                href="https://github.com/2191818/Riffat-s-Cuisine"
+                class="link-btn"
+                ><i class="fa-solid fa-link"></i>
+              </a>
             </div>
           </div>
         </div>
@@ -174,7 +186,9 @@
                 C# GUI-based application designed to assist employees in
                 managing customer information and reservations
               </p>
-              <a href="" class="link-btn"><i class="fa-solid fa-link"></i> </a>
+              <a href="https://github.com/2191818/Hotel-Vanier" class="link-btn"
+                ><i class="fa-solid fa-link"></i>
+              </a>
             </div>
           </div>
         </div>
@@ -185,7 +199,15 @@
             </div>
             <div class="flip-card-back">
               <h3>Deadalus Labyrinth</h3>
-              <p>Description 2</p>
+              <p>
+                Dungeon-crawling RPG built in Unity featuring combat, puzzles,
+                and boss fights while escaping King Minos and a lurking evil.
+              </p>
+              <a
+                href="https://github.com/2191818/Deadalus-Labyrinth"
+                class="link-btn"
+                ><i class="fa-solid fa-link"></i>
+              </a>
             </div>
           </div>
         </div>
