home and about me completed

--- a/aboutme.html
+++ b/aboutme.html
@@ -58,8 +58,43 @@
         </div>
       </div>
     </header>
+    <div>
+      <h3 style="font-weight: bold; text-align: center">About Me</h3>
+
+      <p
+        style="
+          font-weight: bold;
+          text-align: justify;
+          width: 80%;
+          margin: 0 auto 20px auto;
+        "
+      >
+        I am a passionate software developer with a strong foundation in
+        programming and application development. I am currently pursuing a
+        Bachelor's degree in Computer Engineering at Concordia University.
+      </p>
+
+      <p
+        style="
+          font-weight: bold;
+          text-align: justify;
+          width: 80%;
+          margin: 0 auto;
+        "
+      >
+        I enjoy solving problems and learning new things. Given time, I adapt
+        quickly and consistently find unique solutions and useful functionality
+        that make a real impact. With a background in computer science, I'm
+        eager to bring fresh ideas, solid code, and a collaborative mindset to
+        any development team. Given the opportunity, I’m confident I’ll bring
+        unique solutions, strong functionality, and a mindset focused on growth
+        and collaboration.
+      </p>
+    </div>
+
+    <br />
     <div style="text-align: center">
-      <h5 style="font-weight: bold">Education</h5>
+      <h3 style="font-weight: bold">Education</h3>
       <p style="font-weight: bold">
         My academic background has equipped me with essential knowledge in
         computer systems, programming, and software engineering, supported by
@@ -89,7 +124,7 @@
           alt="Vanier Logo"
         />
         <div class="card-body">
-          <h5 class="card-title">DEC in Computer Science</h5>
+          <h3 class="card-title">DEC in Computer Science</h3>
           <p class="card-text">
             Completed a 3-year program at Vanier College focused on software
             development, programming fundamentals, and applied computing.
