rough template and slide thingy for about site

--- a/aboutste.html
+++ b/aboutste.html
@@ -68,6 +68,46 @@
       Let's make the professional connection happen! 🌟
     </p>
     <br />
+    <section class="about-site">
+      <h2>About This Site</h2>
+
+      <div class="slider-container">
+        <div class="slide active">
+          <h3>Purpose</h3>
+          <p>
+            This site exists to demonstrate my software development skills,
+            showcase projects, and serve as a living resume.
+          </p>
+        </div>
+
+        <div class="slide">
+          <h3>Creation Process</h3>
+          <p>
+            Built from scratch with a focus on clean structure, design planning,
+            reusable components, and version control.
+          </p>
+        </div>
+
+        <div class="slide">
+          <h3>Technologies Used</h3>
+          <ul>
+            <li>HTML, CSS, JavaScript</li>
+            <li>Bootstrap for layout and styling</li>
+            <li>Font Awesome for icons</li>
+            <li>GitHub Pages for deployment</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="slider-buttons">
+        <button onclick="changeSlide(-1)">←</button>
+        <button onclick="changeSlide(1)">→</button>
+      </div>
+    </section>
+
+    <script src="scripts.js"></script>
+
+    <br />
     <a
       href="index.html"
       class="custom-btn"
