--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="images/tablogo.png" />
   </head>
   <body>
     <script
@@ -159,7 +160,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="images/tablogo.png" alt="Riffat's Cuisine" />
+              <img src="images/rflogo.png" alt="Riffat's Cuisine" />
             </div>
             <div class="flip-card-back">
               <h3>Riffat's Cuisine</h3>
