--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       class="content-section"
       style="display: none; text-align: center; font-weight: bold"
     >
-      <p>Current Skills:</p>
+      <p>Skills:</p>
       <div class="skills-card">
         <div class="skill-item">
           <i style="color: #5ed3f3" class="fa-brands fa-react"></i>
