dark mode trolling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
-    <button class="mode-toggle-btn" aria-label="Toggle dark mode">
+    <button
+      class="mode-toggle-btn"
+      aria-label="Toggle dark mode"
+      onclick="showDarkModeAlert()"
+    >
       <i class="fa-regular fa-lightbulb"></i>
     </button>
     <br />
